@@ -1,4 +1,4 @@
-$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.361 2006/06/27 15:38:07 ph10 Exp $
+$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.362 2006/06/28 13:59:12 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -48,6 +48,9 @@ PH/03 Fixed Bugzilla #101: macro definition between ACLs doesn't work.
 PH/04 Applied Magnus Holmgren's patch to fix Bugzilla #98: transport's home
       directory not expanded when it should be if an expanded home directory
       was set for the address (which is overridden by the transport).
+
+PH/05 Applied Alex Kiernan's patch to fix Bugzilla #99: a problem with
+      libradius.
 
 
 Exim version 4.62
